change background based on media queries

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="https://github.com/maestrotv23" target="_blank">
             <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://wa.me/+5591993189903">
+        <a href="https://wa.me/+5591993189903" target="_blank">
             <ion-icon name="logo-whatsapp"></ion-icon>
         </a>
     </div>
