--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 </head>
 
 <body>
+
+    <div id="like-container">
+        <div id="like-button" onclick="likePage()">
+          <ion-icon name="heart"></ion-icon>
+        </div>
+        <div id="like-count">
+          <span id="like-count-number">0</span> curtidas
+        </div>
+      </div>
+      
+
     <div id="container">
 
         <div id="profile">
@@ -73,6 +84,7 @@
     <script src="script.js"></script>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
-
+    <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" ></script> 
+    <script nomodule src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" ></script>
 </body>
 </html>
